--- a/developer/index.jade
+++ b/developer/index.jade
@@ -412,8 +412,8 @@ html(lang="ru")
           pre
             code.javascript='var texture = THREE.ImageUtils.loadTexture(\n\t"img/box.png"\n);\nvar cube = new THREE.Mesh(\n\tgeometry, \n\tnew THREE.MeshPhongMaterial({\n\t\tmap: texture\n\t}));'
 
-      article#demo-5
-        iframe(src="examples/textures/box.html")
+      article#demo-3
+        //- iframe(src="examples/textures/box.html")
 
       article.center.photo.cloud
         h1 
@@ -430,8 +430,8 @@ html(lang="ru")
           pre
             code.javascript='var material = new THREE.MeshFaceMaterial([\n\tside_side,\n\tside_side,\n\ttop_side,  //top\n\tother_side, //bottom\n\tother_side,\n\tother_side\n\t]),\n    cube = new THREE.Mesh(geometry, material);'
 
-      article#demo-box
-        iframe(src="examples/textures/index.html")
+      article#demo-4
+        //- iframe(src="examples/textures/index.html")
 
       article.center.cloud.wireframe.dictor.dictor2
         h1 
@@ -460,8 +460,8 @@ html(lang="ru")
           pre
             code='result.dae.images\nresult.dae.geometries\nresult.dae.materials'
 
-      article
-        iframe(src="examples/collada/index.html")
+      article#demo-5
+        //- iframe(src="examples/collada/index.html")
 
 
       article.center.qrcode
@@ -499,8 +499,8 @@ html(lang="ru")
           pre
             code.javascript='function modelLoaded(geometry, materials){\n\tmodel = new THREE.Mesh(\n\t\tgeometry, \n\t\tnew THREE.MeshNormalMaterial());\n\tmodel.position.z = 10;\n\tmodel.position.y = -8;\n\tscene.add(model);\n\tcamera.lookAt(\n\t\tnew THREE.Vector3(0,0,0)\n\t);\n}'
 
-      article
-        iframe(src="examples/json/index.html")
+      article#demo-6
+        //- iframe(src="examples/json/index.html")
 
       article.center.qrcode
         .wrapper
@@ -517,9 +517,27 @@ html(lang="ru")
       //-     p.title threejs-collada
       //-     p http://goo.gl/HmiIl5
 
-      article.center
+      article.center.models.cloud
+        h1 
+          .wrapper Откуда брать модели?
+
+      article.center.screenshot
         .wrapper
-          h1 Откуда брать модели
+          img.link(src="img/blendswap.png", alt="Скриншот")
+
+      article.center.qrcode
+        .wrapper
+          img.link(src="svg/blendswap.svg", alt="QRCODE cо ссылкой на blender")
+          p http://blendswap.com/
+
+      article.center.screenshot
+        .wrapper
+          img.link(src="img/mocap.png", alt="Скриншот")
+
+      article.center.qrcode
+        .wrapper
+          img.link(src="svg/mocap.svg", alt="QRCODE cо ссылкой на blender")
+          p http://goo.gl/G62KBp
 
       article.center.screenshot
         .wrapper
@@ -550,21 +568,96 @@ html(lang="ru")
           img.link(src="svg/threejs-editor.svg", alt="QRCODE cо ссылкой на threejs-editor")
           p http://threejs.org/editor/
 
-      article.center
-        .wrapper
-          h1 Анимация
+      //- article.center
+      //-   .wrapper
+      //-     h1 Анимация
 
-      article.center
-        .wrapper
-          h1 Откуда брать mocap
+      //- article.center
+      //-   .wrapper
+      //-     h1 Откуда брать mocap
 
-      article.center
-        .wrapper
-          h1 Физика
+      article.center.physics.cloud
+        h1 Физика
 
-      article.center
+      article.center.qrcode
+        .wrapper
+          h2 Physijs
+          img.link(src="svg/physijs.svg", alt="QRCODE cо ссылкой на threejs-editor")
+          p http://goo.gl/VGFccu
+
+      article.center.qrcode
+        .wrapper
+          h2 ammo.js
+          img.link(src="svg/ammo.svg", alt="QRCODE cо ссылкой на ammo")
+          p http://goo.gl/YTwlMB
+
+      article.center.qrcode
+        .wrapper
+          h2 canon.js
+          img.link(src="svg/cannonjs.svg", alt="QRCODE cо ссылкой на ammo")
+          p http://cannonjs.org/
+
+      article.center.cloud.meteor
         .wrapper
           h1 Пример игры
+
+      article#demo-7
+
+      article.center
+        .wrapper
+          ul
+            li Создать сцену
+            li Добавить внешние модели
+            li Анимировать модели
+            li Добавить интерактивность
+
+      article.center.code-3
+        .wrapper
+          pre
+            code.javascript="shield = new THREE.Object3D();\nsphere = new THREE.SphereGeometry(\n\t2, 8, 8, 0, \n\tMath.PI*2, 0, Math.PI/7)\nshield_mesh = new THREE.Mesh(\n\tsphere,\nnew THREE.MeshNormalMaterial({\n\twireframe: true\n}));\nshield.add(shield_mesh);"
+
+
+      article.center.code-4
+        .wrapper
+          pre
+            code.javascript="json_loader = new THREE.JSONLoader();\njson_loader.load('json/planet.js', modelLoaded);\njson_loader.load('json/rock.js', rockLoaded);\njson_loader.load('json/moon.js', moonLoaded);"
+
+      article.center.code-4
+        .wrapper
+          pre
+            code.javascript="function moonLoaded(geometry, materials){\n\tmoon = new THREE.Object3D();\n\tmoon.add(\n\t\tnew THREE.Mesh(\n\t\tgeometry,\n\t\tnew THREE.MeshNormalMaterial()\n\t));\n\tscene.add(moon);\n}"
+            
+      article.center.code-2
+        .wrapper
+          pre
+            code.javascript="planet.rotation.x+=.001;\nplanet.rotation.y+=.001;\nmoon.rotation.z+=.01;"
+
+
+      article.center.code-4
+        .wrapper
+          pre
+            code.javascript='document.addEventListener("keydown", arrowsDown);\ndocument.addEventListener("keyup", arrowsUp);'
+
+      article.center.code-4
+        .wrapper
+          pre
+            code.javascript='function arrowsDown(event){\nvar larr = 37,\n    rarr = 39;\nswitch(event.which){\n\tcase 37:\n\t\trollLeft = true;\n\t\tbreak;\n\tcase 39:\n\t\trollRight = true;\n\tbreak;\n}}'
+
+      article.center.code-4
+        .wrapper
+          pre
+            code.javascript='document.addEventListener("keydown", arrowsDown);\ndocument.addEventListener("keyup", arrowsUp);'
+      
+      article.center.code-3
+        .wrapper
+          pre
+            code.javascript='if(rollRight===true){\n\tshield.rotation.z-=.05;\n}\nif(rollLeft===true){\n\tshield.rotation.z+=.05;\n\t}'
+
+      article.center.code-4
+        .wrapper
+          pre
+            code.javascript='var ray = new THREE.Ray(\n\tplanet.position,\n\trock.position\n);\nvar distance = ray.distanceToPoint(\n\trock.position);\nif (distance < 1 ) {\n\tdeleteFromList.push({\n\t\tobj:rocks[index],\n\t\tindex:index\n\t});\n\tendgame();\n};'
+
 
       article.contacts.center.qrcode
         .wrapper
