--- a/developer/styl/slides.styl
+++ b/developer/styl/slides.styl
@@ -1,3 +1,97 @@
+#demo-2
+  background url('../img/strap.png') 50% 50% no-repeat
+  background-size contain
+  
+#demo-3
+  background url('../img/texture-0.png') 50% 50% no-repeat
+  background-size contain
+  
+#demo-4
+  background url('../img/texture.png') 50% 50% no-repeat
+  background-size contain
+  
+#demo-5
+  background url('../img/collada 2.png') 50% 50% no-repeat
+  background-size contain
+  
+#demo-6
+  background url('../img/json.png') 50% 50% no-repeat
+  background-size contain
+  
+#demo-7
+  background url('../img/game.png') 50% 50% no-repeat
+  background-size contain
+  
+.cloud.meteor
+  background url('../img/meteors.jpg') 50% 50% no-repeat
+  background-size cover
+  h1
+    right 0
+    left 0
+    top 0
+    bottom 0
+    margin auto
+    position absolute
+    padding 40px
+    box-sizing border-box 
+    width 240px
+    height 240px
+    line-height 160px
+    font-size 24px
+    white-space nowrap
+    .wrapper
+      line-height 1.43
+    &:after
+      display none
+      transform-origin 10px -120px
+      transform rotate(20deg)  
+  
+.physics.cloud
+  background url('../img/physics.png') 50% 50% no-repeat
+  background-size contain
+  h1
+    right 0
+    left 0
+    top 0
+    bottom 0
+    margin auto
+    position absolute
+    padding 40px
+    box-sizing border-box 
+    width 240px
+    height 240px
+    line-height 160px
+    font-size 30px
+    .wrapper
+      line-height 1.43
+    &:after
+      display none
+      transform-origin 10px -120px
+      transform rotate(20deg)
+
+.models.cloud
+  background url('../img/models.jpg') 50% 50% no-repeat
+  background-size cover
+  h1
+    right 0
+    left 0
+    top 20px
+    padding 40px
+    box-sizing border-box 
+    width 240px
+    height 240px
+    line-height 160px
+    font-size 30px 
+    background-color #8EC63F
+    color #fff
+    text-align left
+    .wrapper
+      line-height 1.43
+    &:after
+      border-color #8EC63F transparent transparent
+      transform-origin 10px -120px
+      transform rotate(20deg)
+
 .cloud.wireframe
   background url('../img/wireframe-library.jpg') 50% 50% no-repeat
   background-size cover
